--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.5.0",
+		"@typescript-eslint/parser": "^7.1.1",
 		"eslint": "^8.57.0",
 		"eslint-config-preact": "^1.3.0",
+		"eslint-plugin-jest": "^27.9.0",
+		"jest": "^29.7.0",
 		"typescript": "^5.4.2",
 		"vite": "^4.3.2"
-	},
-	"eslintConfig": {
-		"extends": "preact"
 	}
 }
