--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"classnames": "^2.5.1",
 		"preact": "^10.13.1",
-		"preact-iso": "^2.4.0"
+		"preact-iso": "^2.4.0",
+		"socket.io-client": "^4.7.4"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.5.0",
@@ -17,6 +19,7 @@
 		"eslint-config-preact": "^1.3.0",
 		"eslint-plugin-jest": "^27.9.0",
 		"jest": "^29.7.0",
+		"sass": "^1.71.1",
 		"typescript": "^5.4.2",
 		"vite": "^4.3.2"
 	}
