--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,8 @@ serde_json = "1.0"
 tower-http = {version = "0.4", features = ["cors"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
+diesel = "2.1.4"
+redis = "0.24.0"
+argon2 = "0.5.3"
+lettre = "0.11.4"
+rand = "0.8.5"
