--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
 		"classnames": "^2.5.1",
 		"preact": "^10.13.1",
 		"preact-iso": "^2.4.0",
+		"react-timer-hook": "^3.0.7",
+		"react-toastify": "^10.0.4",
 		"socket.io-client": "^4.7.4"
 	},
 	"devDependencies": {
