--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0"
 tower-http = {version = "0.4", features = ["cors"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
-diesel = "2.1.4"
+diesel = { version = "2.1.4", features = ["postgres"] }
 redis = "0.24.0"
 argon2 = "0.5.3"
 lettre = "0.11.4"
@@ -24,3 +24,4 @@ rand = "0.8.5"
 lazy_static = "1.4.0"
 cat-loggr = "1.0.2"
 serde_millis = "0.1.1"
+dotenvy = "0.15.7"
