--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0"
 tower-http = {version = "0.4", features = ["cors"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
-diesel = { version = "2.1.4", features = ["postgres"] }
+diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
 redis = "0.24.0"
 argon2 = "0.5.3"
 lettre = "0.11.4"
