--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.1.0",
+		"@dnd-kit/sortable": "^8.0.0",
 		"classnames": "^2.5.1",
+		"install": "^0.13.0",
+		"npm": "^10.5.0",
 		"preact": "^10.13.1",
 		"preact-iso": "^2.4.0",
 		"react-timer-hook": "^3.0.7",
