Refactor: Use strings for ids

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,5 @@ lazy_static = "1.4.0"
 cat-loggr = "1.0.2"
 serde_millis = "0.1.1"
 dotenvy = "0.15.7"
+uuid = {version = "1.7.0", features = [ "v4", "fast-rng" ] }
+uuid-b64 = "0.1.1"
