--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 axum = {version = "0.6", features = ["macros"] }
+axum-extra = {version = "0.6", features = ["cookie"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = {version = "0.4", features = ["cors"]}
@@ -28,3 +29,4 @@ dotenvy = "0.15.7"
 uuid = {version = "1.7.0", features = [ "v4", "fast-rng" ] }
 uuid-b64 = "0.1.1"
 email_address = "0.2.4"
+futures-util = "0.3.30"
