Server: Get quizzes for requesting @me user
Client: Show quizzes in logged in view, fix bug with host view blanking when no player answered after timer expired, make host and edit buttons work

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -19,6 +19,7 @@
 		"no-console": "off",
 		"indent": [ 2, "tab", { "SwitchCase": 1 } ],
 		"object-curly-spacing": ["error", "always"],
-		"array-bracket-spacing": ["error", "always", { "singleValue": false }]
+		"array-bracket-spacing": ["error", "always", { "singleValue": false }],
+        "react-hooks/exhaustive-deps": "off"
     }
 }
