--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
+		"dev": "vite --host",
+		"build": "vite build ",
 		"preview": "vite preview"
 	},
 	"dependencies": {
