Move filestorage to app state

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,8 @@
 DATABASE_URL=postgres://username:password@localhost/openkahoot
 
+# File storage engine, either disk or s3
 FILE_STORAGE_ENGINE=disk
+# Where to store files on disk
 FILE_STORAGE_PATH=files
+
+# S3 config
