--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,5 +33,5 @@ futures-util = "0.3.30"
 async-trait = "0.1.79"
 image = "^0.24.0"
 webp = "0.2.6"
-aws-sdk-s3 = "1.21.0"
-aws-config = "1.1.9"
+rusoto_s3 = "0.48.0"
+rusoto_core = "0.48.0"
