--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,16 @@ FILE_STORAGE_ENGINE=disk
 FILE_STORAGE_PATH=files
 
 # S3 config
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+S3_BUCKET=
+S3_ENDPOINT=
+
+# Email Config
+SMTP_ENABLED=true # True or False
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM=
+SMTP_HOST=
