--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,7 +20,7 @@ chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }
 redis = "0.24.0"
 argon2 = "0.5.3"
-lettre = "0.11.4"
+lettre = { version = "0.11.4", default-features = false, features = ["smtp-transport", "pool", "tokio1-native-tls", "hostname", "builder", "tokio1"]}
 rand = "0.8.5"
 lazy_static = "1.4.0"
 cat-loggr = "1.0.2"
